Rebuilt popup bubbles correctly after the shelf alignment is changed

Previously popup bubbles remain with insufficient state after the shelf
position is changed. This CL adds the code to explicitly recreate bubbles
so that it works correctly even after the shelf position is updated.

Bug: 820400
Test: manual test (checked the repro steps in the issue)
Change-Id: I7c196614c2a148eda53650cae145b544af9bbded
Reviewed-on: https://chromium-review.googlesource.com/960681
Reviewed-by: Tetsui Ohkubo <tetsui@chromium.org>
Commit-Queue: Yoshiki Iguchi <yoshiki@chromium.org>
Cr-Commit-Position: refs/heads/master@{#543062}
Former-commit-id: 9ef10a9b61d4f68d4dfb5fbaec5f057de218df03